--- a/package.json
+++ b/package.json
@@ -8,5 +8,9 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "serverless": "^1.35.0",
+    "serverless-plugin-typescript": "^1.1.5"
+  }
 }
