--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,10 +3,10 @@
     "preserveConstEnums": true,
     "strictNullChecks": true,
     "sourceMap": true,
-    "target": "es6",
+    "target": "es5",
     "outDir": ".build",
     "moduleResolution": "node",
-    "lib": ["es2015"],
+    "lib": ["es2015", "dom"],
     "rootDir": "./"
   }
 }
