--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/uuid": "^3.4.4",
     "serverless": "^1.35.0",
     "serverless-plugin-typescript": "^1.1.5",
     "typescript": "^3.2.2"
   },
   "dependencies": {
-    "axios": "^0.18.0"
+    "axios": "^0.18.0",
+    "dynamoose": "^1.3.0",
+    "uuid": "^3.3.2"
   }
 }
