--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/cheerio": "^0.22.10",
     "@types/uuid": "^3.4.4",
     "serverless": "^1.35.0",
     "serverless-plugin-typescript": "^1.1.5",
