--- a/serverless.yml
+++ b/serverless.yml
@@ -10,6 +10,8 @@ provider:
   region: us-east-1
   logRetentionInDays: 14
   memorySize: 128
+  environment:
+    BLOG_LINK_ADMIN_KEY: ${env:BLOG_LINK_ADMIN_KEY}
   iamRoleStatements:
     - Effect: Allow
       Action:
